# verrou

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac  env.sh.in  generateBackendInterOperator.py  install-interflop.sh  interflop_valgrind_stdlib.c  interflop_valgrind_stdlib.h  travis.mk  verrou.h  vr_clo.c  vr_clreq.c  vr_error.c  vr_exclude.c  vr_generated_from_templates.h  vr_include_trace.c  vr_instrumentOp_impl.h  vr_interp_operator_impl.h  vr_interp_operator_template_2args.h  vr_interp_operator_template_3args.h  vr_interp_operator_template_cast.h  vr_main.c  vr_main.h  vr_traceBB_impl.h
.github/workflows/: github-actions-travis.yml
Interlibmath/: Makefile  interlibmath.cxx  testCos.py
interflop_backends/: interflop.h  statically_integrated_backends.h
interflop_backends/backend_check_float_max/: interflop_check_float_max.cxx  interflop_check_float_max.h
interflop_backends/backend_checkcancellation/: interflop_checkcancellation.h
interflop_backends/backend_checkdenorm/: interflop_checkdenorm.cxx  interflop_checkdenorm.h
interflop_backends/backend_mcaquad/: interflop_mcaquad.c  interflop_mcaquad.h  libmca-quad.h  mcalib.c
interflop_backends/backend_mcaquad/common/: fmaqApprox.c  fmaqApprox.h
interflop_backends/backend_vprec/: interflop_vprec.c  interflop_vprec.h
interflop_backends/backend_vprec/common/: float_utils.h  vprec_tools.h
interflop_backends/common/: vr_fma.hxx
interflop_backends/interflop_bitmask/: interflop_valgrind_bitmask.c  interflop_valgrind_bitmask.h
interflop_backends/interflop_cancellation/: interflop_valgrind_cancellation.c  interflop_valgrind_cancellation.h
interflop_backends/interflop_checkcancellation/: interflop_valgrind_checkcancellation.c  interflop_valgrind_checkcancellation.h
interflop_backends/interflop_checkdenormal/: interflop_valgrind_checkdenormal.c  interflop_valgrind_checkdenormal.h
interflop_backends/interflop_checkfloatmax/: interflop_valgrind_checkfloatmax.c  interflop_valgrind_checkfloatmax.h
interflop_backends/interflop_mcaint/: interflop_valgrind_mcaint.c  interflop_valgrind_mcaint.h
interflop_backends/interflop_mcaquad/: interflop_valgrind_mcaquad.c  interflop_valgrind_mcaquad.h
interflop_backends/interflop_verrou/: interflop_valgrind_verrou.c  interflop_valgrind_verrou.h  interflop_verrou.cxx  interflop_verrou.h  vr_op.hxx  vr_rand.h  vr_rand_implem.h  vr_roundingOp.hxx
interflop_backends/interflop_verrou/examples/stencil/: timing.h
interflop_backends/interflop_vprec/: interflop_valgrind_vprec.c  interflop_valgrind_vprec.h
synchroLib/: verrouCBinding.c  verrouCBinding.h  verrouPyBinding.py  verrouSynchroLib.h
tests/: Makefile.am  accuClreq.c  accuClreq1.stderr.exp  accuClreq1.vgtest  accuClreq2.stderr.exp  accuClreq2.vgtest  clreq.c  clreq.stderr.exp  denorm.cxx  denorm1.stderr.exp  denorm2.stderr.exp  filter_stderr  filter_stdout  naninf-rnd.stderr.exp  seed.stderr.exp  seed.stdout.exp  seed_random_det.stderr.exp  sum.c  sum1.stderr.exp  sum2.stderr.exp  sum3.stderr.exp  test_det.c  test_det_average_comdet.stderr.exp  test_det_average_det.stderr.exp  test_det_random_comdet.stderr.exp  test_det_random_det.stderr.exp
unitTest/: makefile
unitTest/checkRounding/: checkRounding.cxx  runCheck.py
unitTest/testPerf/: run.sh  stencil.cpp  study.sh  timing.h
